refactor(backend): port to Boot 2.7 / Hibernate 5.6 / Spring Security 5.7
Catch the backend up with the Boot 2.7 / Hibernate 5.6 / Spring
Security 5.7 stack put in place by the previous commit:

- jakarta.* -> javax.* across domain entities, criteria specs, services
  and DTOs (Boot 2.7 still ships Java EE 8 javax)
- record-style Criteria classes become final POJOs so Java 11 compiles
  them; accessor names (text(), ods(), ...) preserved
- domain.Sustainability switches the Hibernate 6 @JdbcTypeCode for a
  @Column(columnDefinition = "SMALLINT") that ddl-auto=validate
  tolerates on Hibernate 5.6
- DB2v97Dialect + DB2v97SqlAstTranslator are gone -- Hibernate 5.6's
  stock DB2Dialect already emits the legacy ROW_NUMBER()/FETCH FIRST
  pagination DB2 LUW 9.7 expects, no subclass needed
- DataNumberRepository gains findByGraphIdOrderById so detail lists and
  combobox options come back sorted by id; services pass Sort.by("id")
  on all non-paginated lookups
- GraphService gains deleteWithNumbers + deleteAfterMoveNumbers to
  satisfy the FK from LNI_NUMERO_UEM to LNI_GRAFICO (cascade or move)
- Spring Security consolidated into one SecurityConfig with a composite
  AuthenticationManager that takes whatever providers exist (in-memory
  DaoAuthenticationProvider in dev, LdapAuthenticationProvider when
  LdapContextSource is on the context). CSRF off (ZK AU + plain login
  form); GET /logout enabled; session-fixation set to changeSessionId.
- MethodSecurityConfig swaps @EnableMethodSecurity for the SS 5.7
  @EnableGlobalMethodSecurity(prePostEnabled = true)
- CurrentUser reads from SecurityContextHolder on every call (was a
  stateful singleton, wrong for multi-session web)
- AuthenticationService, ProdSecurityConfig and the custom
  DefaultRoleAuthoritiesPopulator are dropped -- LDAP authority is
  granted via DefaultLdapAuthoritiesPopulator with ROLE_<default-role>
- DataLniApplication extends SpringBootServletInitializer; both main()
  and onStartup() apply the pt-BR Lo